# larkline

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: lark.rb
docs/: ARCHITECTURE.md  LUA_PLUGINS.md
examples/plugins/git/: branches.lua  manifest.toml  status.lua
examples/plugins/git-branches/: init.lua  manifest.toml
examples/plugins/hello-world/: manifest.toml  run.sh
examples/plugins/hello-world-lua/: init.lua  manifest.toml
examples/plugins/ip-addresses/: manifest.toml  run.sh
examples/plugins/shell-snippets/: init.lua  manifest.toml
examples/plugins/system-info/: manifest.toml  run.sh
examples/plugins/system-info-lua/: init.lua  manifest.toml
examples/plugins/top-processes/: manifest.toml  run.sh
examples/plugins/weather/: init.lua  manifest.toml
src/: action.rs  app.rs  config.rs  input.rs  lib.rs  main.rs
src/plugin/: engine.rs  lua.rs  mod.rs  registry.rs  script.rs  traits.rs
src/tui/: mod.rs  ui.rs
tests/: plugin_execution_test.rs
tests/fixtures/plugins/plain-text/: manifest.toml  run.sh
tests/fixtures/plugins/slow/: manifest.toml  run.sh
