[package]
name = "larkline"
version = "0.1.0"
edition = "2024"
description = "The line to all your tools — a keyboard-driven terminal command palette"
repository = "https://github.com/tfinklea/larkline"
license = "GPL-3.0-only"
rust-version = "1.85"
homepage = "https://github.com/tfinklea/larkline"
authors = ["Taylor Finklea"]
keywords = ["cli", "tui", "command-palette", "terminal", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "lark"
path = "src/main.rs"

[lib]
name = "larkline"
path = "src/lib.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
nucleo-matcher = "0.3"
async-trait = "0.1"
arboard = "3"
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send", "serialize", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ansi-to-tui = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common false positives in application code
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
